--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.11"
 authors = [{ name = "Chris Hay" }]
 dependencies = [
     "chuk-mcp-server>=0.4.4",
+    "chuk-virtual-fs>=0.1.0",
     "pydantic>=2.11.7",
     "aiofiles>=23.0.0",
     "jinja2>=3.1.0",
