--- a/remotion-templates/package.json
+++ b/remotion-templates/package.json
@@ -12,9 +12,11 @@
     "@remotion/cli": "^4.0.0",
     "@remotion/bundler": "^4.0.0",
     "@remotion/renderer": "^4.0.0",
+    "@remotion/studio": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remotion": "^4.0.0"
+    "remotion": "^4.0.0",
+    "prism-react-renderer": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
